test/1.4/errors/T_EVOID_typedefed.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

typedef void x;

/// ERROR EVOID
session x y;
